# filecomparator

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/core/: CMakeLists.txt  directoryhandler.cpp  directoryhandler.h  filescomparator.cpp  filescomparator.h  pathscollection.cpp
sources/core/tests/: CMakeLists.txt  tests.cpp
sources/main/: CMakeLists.txt  main.cpp
sources/ui/: CMakeLists.txt  cui.cpp  cui.h  iui.h
